[FIX] partner_autocomplete: slice options when there are too many options
Before this fix: when partner autocomplete has more than 16 options in
bigger screen then first 16 options will be displayed in autocomplete and
rest are will have display: none css, because of this when navigating through
keyboard using UP/DOWN arrow keys, on last item when pressing DOWN arrow key
many time then it comes to first item, while when DOWN arrow key is pressed
on last item then it should come to first item.

After this commit: instead of hiding autocomplete items we removed items
so only visible items is displayed and invisible items is not considered while
navigating throgh arrow keys.

task-2531294

--- a/addons/partner_autocomplete/static/src/scss/partner_autocomplete.scss
+++ b/addons/partner_autocomplete/static/src/scss/partner_autocomplete.scss
@@ -17,9 +17,6 @@
 }
 
 .ui-autocomplete.o_partner_autocomplete_dropdown {
-    > .ui-menu-item:nth-of-type(1n+16) {
-        display: none;
-    }
     > .o_partner_autocomplete_dropdown_item {
         > a {
             white-space: nowrap;
@@ -40,27 +37,5 @@
     }
     > .ui-menu-item > a.ui-state-active .text-muted {
         color: white !important;
-    }
-}
-
-@media (max-height: 700px) {
-    .ui-autocomplete.o_partner_autocomplete_dropdown {
-        > .ui-menu-item:nth-of-type(1n+13) {
-            display: none;
-        }
-    }
-}
-@media (max-height: 620px) {
-    .ui-autocomplete.o_partner_autocomplete_dropdown {
-        > .ui-menu-item:nth-of-type(1n+12) {
-            display: none;
-        }
-    }
-}
-@media (max-height: 570px) {
-    .ui-autocomplete.o_partner_autocomplete_dropdown {
-        > .ui-menu-item:nth-of-type(1n+11) {
-            display: none;
-        }
     }
 }
